fixed startpage text on mobile

--- a/Weggli/Pages/Index.razor.css
+++ b/Weggli/Pages/Index.razor.css
@@ -1,8 +1,11 @@
 h1, h2 {
     color: white;
     text-shadow: black 0px 0px 10px;
+    display: flex;
+    justify-content: center;
 }
 
 h1 {
     font-size: 70px;
+    text-align: center;
 }
